--- a/src/main/resources/templates/photo/index.html
+++ b/src/main/resources/templates/photo/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
+<html xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8">
+		<title>PhotoAlbum</title>
+	</head>
+	<body>
+		<main style="margin: 50px;">
+			<div style="margin-bottom: 50px;">
+				<h1 style="text-align: center;">Photo Album</h1>
+				<a style="color: red; font-size: 25px;" th:href="@{/logout}" sec:authorize="isAuthenticated()">LOGOUT</a>
+			</div>
+			
+			
+			<form style="margin-bottom: 20px; display: inline-block;" th:action="@{photo/filter}" method="POST">
+				<label for="photo-title">Nome photo</label>
+				<input id="photo-title" type="text" name="title" th:value="${title}">
+				<button>Filtra</button>
+			</form>
+			
+			<a style="color: green; margin-left: 20px;" th:href="@{photo/create}" sec:authorize="hasAuthority('ADMIN')">Crea nuova foto</a>
+			
+			<a style="color: purple; margin-left: 20px;" th:href="@{/categories}" sec:authorize="hasAuthority('ADMIN')">VEDI CATEGORIE</a>
+			
+			<div th:if="${photos.size() == 0}">
+				Non ci sono foto qui.
+			</div>
+			
+			<div style="margin-bottom: 10px;" th:if="${photos.size() > 0}" th:each="photo : ${photos}" th:object="${photo}">
+				<a th:href="@{photo/{id} (id=*{id})}">[[ *{title} ]]</a>
+				<a style="margin-left: 5px;" th:href="@{photo/delete/{id} (id=*{id})}" sec:authorize="hasAuthority('ADMIN')">DELETE</a>
+				<a style="margin-left: 5px;" th:href="@{photo/edit/{id} (id=*{id})}" sec:authorize="hasAuthority('ADMIN')">EDIT</a>
+			</div>
+		</main>
+	</body>
 </html>
